--- a/src/result.html
+++ b/src/result.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MovieNest | Result</title>
+     <link rel="icon" href="./images/MovieNest Logo Design.png">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet " href="../styles/result.css">
 </head>
 
@@ -34,6 +36,54 @@
         </div>
 
     </div>
+       <footer class="footer">
+  <div class="footer-container">
+    
+    <!-- Logo + About -->
+    <div class="footer-section about">
+      <img src="../images/MovieNest Logo Design.png" alt="MovieNest Logo" class="footer-logo">
+      <p>
+        MovieNest – Your ultimate hub for movies, shows, and entertainment.  
+        Stream anytime, anywhere.
+      </p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-section">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Movies</a></li>
+        <li><a href="#">Shows</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Support -->
+    <div class="footer-section">
+      <h3>Support</h3>
+      <ul>
+        <li><a href="#">Help Center</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Use</a></li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div class="footer-section social">
+      <h3>Follow Us</h3>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-youtube"></i></a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 MovieNest. All rights reserved.
+  </div>
+</footer>
     <script src="../script/result.js"></script>
 </body>
 
