Design home page

--- a/src/result.html
+++ b/src/result.html
@@ -30,6 +30,8 @@
                 <div id="actor">Actor : </div>
                 <div id="director">Director : </div>
                 <div id="wirter">Writer : </div>
+                <div id="released">Released : </div>
+                <div id="awards">Awards : </div>
                 <div id="country">Country : </div>
                 <div id="year">Year : </div>
             </div>
